--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="#">About Me</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Contact</a></li>
+            <li><a href="./kidcalc/index.html">KidCalc</a></li>
         </ul>
     </nav>
 
