--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Navigation Bar -->
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></a>li>
+            <li><a href="index.html">Home</a></a><li>
             <li><a href="#">About Me</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Contact</a></li>
